--- a/MoinMoin/themes/basic/static/css/basic.css
+++ b/MoinMoin/themes/basic/static/css/basic.css
@@ -4393,3 +4393,34 @@ td.visible-print {
 .moin-navbar-inverse .navbar-nav > li > a {
   color: #c8ddf1;
 }
+.moin-quicklink {
+  position: relative;
+  padding: 10px 15px 10px 15px;
+  border: 1px solid #dddddd;
+  margin-bottom: -1px;
+}
+.moin-quicklink:last-child {
+  margin-bottom: 0;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+.moin-quicklink:hover,
+.moin-quicklink:focus {
+  background-color: #f5f5f5;
+}
+.moin-quicklink-label {
+  display: block;
+}
+.moin-quicklink-label:hover,
+.moin-quicklink-label:focus {
+  text-decoration: none;
+}
+.moin-quicklink-delete {
+  position: absolute;
+  left: 80%;
+  top: 25%;
+}
+.moin-quicklink-delete:hover,
+.moin-quicklink-delete:focus {
+  text-decoration: none;
+}
