--- a/MoinMoin/themes/basic/templates/layout.html
+++ b/MoinMoin/themes/basic/templates/layout.html
@@ -90,8 +90,13 @@
                         {% if loop.first %}
                             <div class="list-group-item">Quick Links</div>
                         {% endif %}
-                            <a class="list-group-item {{ cls }}" href="{{ url }}" {% if title %}title="{{ title }}"{% endif %}>{{ text|shorten_item_name }}
+                            <div class="moin-quicklink">
+                            <a class="moin-quicklink-label {{ cls }}" href="{{ url }}" {% if title %}title="{{ title }}"{% endif %}>{{ text|shorten_item_name }}
                             </a>
+                            <a class="moin-quicklink-delete" href="{{ url_for('frontend.quicklink_item', item_name=text) }}"> 
+                                <i class="icon-remove"></i>
+                            </a>
+                        </div>
                     {% endfor %}
                 </div>
             </div><!--/span-->
