--- a/MoinMoin/themes/basic/static/css/basic.css
+++ b/MoinMoin/themes/basic/static/css/basic.css
@@ -4424,3 +4424,45 @@ td.visible-print {
 .moin-quicklink-delete:focus {
   text-decoration: none;
 }
+.moin-transclusion {
+  max-width: 100%;
+}
+.moin-item-wrapper {
+  position: relative;
+  display: inline-block;
+}
+.moin-item-wrapper > a:hover {
+  color: link_color;
+  text-decoration: none;
+}
+div.moin-item-wrapper {
+  width: 100%;
+}
+.moin-item-overlay-ul,
+.moin-item-overlay-lr {
+  display: none;
+  position: absolute;
+  font-size: 1.2em;
+  font-weight: bold;
+  margin: 0;
+  opacity: .5;
+  padding: 1px;
+  border-color: #428bca;
+  border-style: double;
+}
+.moin-item-overlay-ul {
+  top: -4px;
+  left: -4px;
+  border-width: 3px 0 0 3px;
+}
+.moin-item-overlay-lr {
+  bottom: -4px;
+  right: -4px;
+  border-width: 0 3px 3px 0;
+}
+.moin-item-overlay-ul:hover,
+.moin-item-overlay-lr:hover {
+  opacity: .8;
+  background-color: #555555;
+  color: #428bca;
+}
