Fixes #36, comments toggle enabled

--- a/MoinMoin/themes/basic/static/css/basic.css
+++ b/MoinMoin/themes/basic/static/css/basic.css
@@ -4466,3 +4466,7 @@ div.moin-item-wrapper {
   background-color: #555555;
   color: #428bca;
 }
+.comment {
+  color: #333333;
+  background-color: #e1edf7;
+}
