--- a/MoinMoin/themes/basic/static/custom-less/basic.less
+++ b/MoinMoin/themes/basic/static/custom-less/basic.less
@@ -133,3 +133,8 @@ div.moin-item-wrapper {
     background-color: @gray;
     color: @link-color;
 }
+
+.comment {
+  color: @text-color;
+  background-color: lighten(@link-color, 40%);
+}
