--- a/MoinMoin/themes/basic/static/custom-less/variables.less
+++ b/MoinMoin/themes/basic/static/custom-less/variables.less
@@ -248,6 +248,8 @@
 
 // Moin-Inverted Navbar
 @moin-navbar-inverse-color:					#205081;
+@moin-navbar-inverse-bgcolor:				darken(@moin-navbar-inverse-color, 5%);
+@moin-navbar-inverse-textcolor:				lighten(@moin-navbar-inverse-color, 55%);
 
 // Reset inverted navbar basics
 @navbar-inverse-color:                      @gray-light;
