changes to a white footer

--- a/MoinMoin/themes/basic/templates/layout.html
+++ b/MoinMoin/themes/basic/templates/layout.html
@@ -179,7 +179,7 @@
         </div> <!--/row-->
 
         {% block footer %}
-        <div class="navbar moin-navbar-inverse"> <!--footer-->
+        <div class="navbar"> <!--footer-->
             {{ credits }}
             {{ footer_logos }}
         </div>
