Fixes #40, button added to search bar

--- a/MoinMoin/themes/basic/static/custom-less/basic.less
+++ b/MoinMoin/themes/basic/static/custom-less/basic.less
@@ -41,6 +41,7 @@
 .moin-navbar-inverse {
   .navbar-inverse;
   background-color: @moin-navbar-inverse-bgcolor;
+  padding-left: 0px;
   .navbar-nav {
     > li > a {
       color: @moin-navbar-inverse-textcolor;
