--- a/MoinMoin/themes/basic/static/css/basic.css
+++ b/MoinMoin/themes/basic/static/css/basic.css
@@ -4328,6 +4328,7 @@ td.visible-print {
 .moin-navbar-inverse {
   background-color: #222222;
   background-color: #1b436d;
+  padding-left: 0px;
 }
 .moin-navbar-inverse .navbar-brand {
   color: #999999;
