--- a/MoinMoin/templates/base.html
+++ b/MoinMoin/templates/base.html
@@ -80,6 +80,7 @@
         <script src="{{ url_for('serve.files', name='svgweb', filename='svg.js') }}"></script>
     <![endif]-->
     <script src="{{ url_for('serve.files', name='jquery', filename='jquery.min.js') }}"></script>
+    <script src="{{ url_for('serve.files', name='bootstrap', filename='js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('frontend.template', filename='common.js') }}"></script>
     <script src="{{ url_for('serve.files', name='autosize', filename='jquery.autosize-min.js') }}"></script>
     {{ scripts }}
