dropdowns in history view now work without JS

--- a/MoinMoin/themes/basic/static/css/custom.css
+++ b/MoinMoin/themes/basic/static/css/custom.css
@@ -7,3 +7,11 @@ html{
 #moin-button-diff {
 	text-align: center;
 }
+.menu .submenu {
+	display: none;
+	margin-bottom: 0px;
+}
+.menu:hover .submenu {
+	display: block;
+}
+
