--- a/MoinMoin/themes/basic/templates/layout.html
+++ b/MoinMoin/themes/basic/templates/layout.html
@@ -16,6 +16,7 @@
 {% block head %}
     {{ super() }}
     <link media="all" rel="stylesheet" href="{{ theme_static('css/basic.css') }}" />
+    <link media="all" rel="stylesheet" href="{{ theme_static('css/custom.css') }}" />
 {% endblock %}
 
 {% block layout %}
