--- a/MoinMoin/themes/basic/templates/history.html
+++ b/MoinMoin/themes/basic/templates/history.html
@@ -54,20 +54,32 @@
                     <td class="moin-wordbreak">{{ doc.contenttype }}</td>
                     <td class="moin-wordbreak">{{ doc.comment }}</td>
                     <td>
-            <div class="btn-group dropup">
-                        <button class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown"> <span class="caret"></span></button>
-                <ul class="dropdown-menu pull-right"> 
-<li><a href="{{ url_for('frontend.show_item', item_name=doc.name[0], rev=doc.revid) }}" tabindex="-1" href="#">{{ _('show') }}</a></li>
-<li><a href="{{ url_for('frontend.show_item_meta', item_name=doc.name[0], rev=doc.revid) }}" tabindex="-1" href="#">{{ _('meta') }}</a></li>
-<li><a href="{{ url_for('frontend.download_item', item_name=doc.name[0], rev=doc.revid) }}" tabindex="-1" href="#">{{ _('download') }}</a></li>
+            <div class="btn-group dropup menu">
+                        <button class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
+                            <span class="caret"></span>
+                        </button>
+                <ul class="dropdown-menu pull-right submenu"> 
+<li>
+    <a href="{{ url_for('frontend.show_item', item_name=doc.name[0], rev=doc.revid) }}" tabindex="-1" href="#">{{ _('show') }}</a></li>
+<li>
+    <a href="{{ url_for('frontend.show_item_meta', item_name=doc.name[0], rev=doc.revid) }}" tabindex="-1" href="#">{{ _('meta') }}</a>
+</li>
+<li>
+    <a href="{{ url_for('frontend.download_item', item_name=doc.name[0], rev=doc.revid) }}" tabindex="-1" href="#">{{ _('download') }}</a>
+</li>
 <li>
     <a href="{{ url_for('frontend.highlight_item', item_name=doc.name[0], rev=doc.revid) }}" tabindex="-1" href="#">{{ _('highlight') }}</a>
 </li>
     {% if user.may.write(item_name) -%}
-    <li><a href="{{ url_for('frontend.revert_item', item_name=doc.name[0], rev=doc.revid) }}" tabindex="-1" href="#">{{ _('revert') }}</a></li>
+        <li>
+            <a href="{{ url_for('frontend.revert_item', item_name=doc.name[0], rev=doc.revid) }}" tabindex="-1" href="#">{{ _('revert') }}</a>
+        </li>
     {%- endif %}
     {% if user.may.destroy(item_name) -%}
-    <li><a href="{{ url_for('frontend.destroy_item', item_name=doc.name[0], rev=doc.revid) }}" tabindex="-1" href="#">{{ _('destroy') }}</a> </li>
+        <li>
+            <a href="{{ url_for('frontend.destroy_item', item_name=doc.name[0], rev=doc.revid) }}" tabindex="-1" href="#">{{ _('destroy') }}
+            </a> 
+        </li>
     {%- endif %}
         </tr>
         {% endfor %}
