--- a/MoinMoin/themes/basic/templates/history.html
+++ b/MoinMoin/themes/basic/templates/history.html
@@ -55,7 +55,7 @@
                     <td class="moin-wordbreak">{{ doc.comment }}</td>
                     <td>
             <div class="btn-group dropup menu">
-                        <button class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
+                        <button class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown" type="button">
                             <span class="caret"></span>
                         </button>
                 <ul class="dropdown-menu pull-right submenu"> 
