--- a/MoinMoin/themes/basic/static/custom-less/basic.less
+++ b/MoinMoin/themes/basic/static/custom-less/basic.less
@@ -1,5 +1,13 @@
 @import "bootstrap.less";
 
+.moin-diff-added {
+  background-color: @moin-diff-added;
+}
+
+.moin-diff-removed {
+  background-color: @moin-diff-removed;
+}
+
 .moin-breadcrumb {
   .breadcrumb;
   > li {
