--- a/MoinMoin/themes/basic/static/custom-less/variables.less
+++ b/MoinMoin/themes/basic/static/custom-less/variables.less
@@ -6,6 +6,11 @@
 // Global values
 // --------------------------------------------------
 
+// Diffs
+// -------------------------
+@moin-diff-removed:		 #ffdddd;
+@moin-diff-added:		 #ccffcc;
+
 // Grays
 // -------------------------
 
