--- a/MoinMoin/themes/basic/templates/history.html
+++ b/MoinMoin/themes/basic/templates/history.html
@@ -29,7 +29,6 @@
                     <th>{{ _("Name") }}</th>
                     <th>{{ _("Rev.") }}</th>
                     <th>{{ _("Timestamp") }}</th>
-                    <th class="moin-integer">{{ _("Size") }}</th>
                     <th id="moin-button-diff"><button class="btn btn-primary">Diff</button></th>
                     <th>{{ _("Editor") }}</th>
                     <th>{{ _("Type") }}</th>
@@ -41,9 +40,8 @@
                 {% for doc in history %}
                 <tr>
                     <td class="moin-wordbreak">{{ doc.name|join(' | ') }}</td>
-                    <td>{{ doc.revid | shorten_id }}</td>
+                    <td title="{{ _("Size") }}: {{ doc.size }}" >{{ doc.revid | shorten_id }}</td>
                     <td>{{ doc.mtime|datetimeformat }}</td>
-                    <td class="moin-integer">{{ doc.size }}</td>
                     <td>
                         <div class="moin-hist-rev">
                             <input type="radio" name="rev1" value="{{ doc.revid }}" />
