--- a/MoinMoin/themes/basic/templates/history.html
+++ b/MoinMoin/themes/basic/templates/history.html
@@ -29,7 +29,7 @@
                     <th>{{ _("Name") }}</th>
                     <th>{{ _("Rev.") }}</th>
                     <th>{{ _("Timestamp") }}</th>
-                    <th id="moin-button-diff"><button class="btn btn-primary">Diff</button></th>
+                    <th id="moin-button-diff"><button class="btn btn-sm btn-primary">Diff</button></th>
                     <th>{{ _("Editor") }}</th>
                     <th>{{ _("Type") }}</th>
                     <th>{{ _("Comment") }}</th>
