--- a/MoinMoin/themes/basic/templates/history.html
+++ b/MoinMoin/themes/basic/templates/history.html
@@ -11,7 +11,7 @@
 {% block content %}
     {% set (history, next_offset, previous_offset) = history_page %}
     {% if history %}
-    <div class='moin-offset-links'>
+    <div>
         {% if previous_offset >= 0 %}
             <a href="{{ url_for('frontend.history', item_name=item_name, offset=previous_offset) }}" title="{{ _("Previous") }}">&laquo;</a>
         {% endif %}
@@ -20,9 +20,8 @@
         {% endif %}
     </div>
     <h2>{{ title }}</h2>
-    <div class="moin-clr"></div>
     <form action="{{ url_for('frontend.diff', item_name=item_name) }}" method="GET">
-        <div id="moin-page-history">
+        <div>
         <table class="table table-hover table-condensed">
             <thead>
                 <tr>
@@ -39,7 +38,7 @@
             <tbody>
                 {% for doc in history %}
                 <tr>
-                    <td class="moin-wordbreak">{{ doc.name|join(' | ') }}</td>
+                    <td>{{ doc.name|join(' | ') }}</td>
                     <td title="{{ _("Size") }}: {{ doc.size }}" >{{ doc.revid | shorten_id }}</td>
                     <td>{{ doc.mtime|datetimeformat }}</td>
                     <td>
@@ -48,9 +47,9 @@
                             <input type="radio" name="rev2" value="{{ doc.revid }}" />
                         </div>
                     </td>
-                    <td class="moin-wordbreak">{{ utils.editor_info(doc) }}</td>
-                    <td class="moin-wordbreak" title="{{ doc.contenttype }}">{{ doc.contenttype|shorten_ctype }}</td>
-                    <td class="moin-wordbreak">{{ doc.comment }}</td>
+                    <td>{{ utils.editor_info(doc) }}</td>
+                    <td title="{{ doc.contenttype }}">{{ doc.contenttype|shorten_ctype }}</td>
+                    <td>{{ doc.comment }}</td>
                     <td>
             <div class="btn-group dropup menu">
                         <button class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown" type="button">
