Fixes #57, by using a fixed width icon

--- a/MoinMoin/themes/basic/templates/show.html
+++ b/MoinMoin/themes/basic/templates/show.html
@@ -11,9 +11,7 @@
             <div class="list-group-item">{{ paneltitle }}</div>
         {% endif %}
         <a class="list-group-item" href="{{ href }}" title="{{ title }}" rel="nofollow">
-            <span class="icon-stack">
-                <i class="{{ iconcls }}"></i>
-            </span> 
+            <i class="{{ iconcls }} icon-fixed-width"></i>
             {{ label }}
         </a>
     {% endfor %}
